feat: prepare Fabric 26.2 migration beta